--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -3,10 +3,10 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before Starting</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a></td> </tr>
-      <tr> <td>09:00</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Jargon Busting, A Computational Approach, Introduction to Working with Data (Regular Expressions)</a></td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Jargon Busting and RegExes: Now you have 2 problems.</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-shell/">The Unix Shell</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-shell/">BASHing your way to happiness</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
@@ -15,10 +15,10 @@
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td><a href="https://librarycarpentry.org/lc-git/">Introduction to Git</a></td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://librarycarpentry.org/lc-git/">Version Control Your Life</a></td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">OpenRefine</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">All Raw Data is Dirty</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop survey</a></td> </tr>
